# compact-encoding

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
benches/: simple.rs
src/: encodable.rs  error.rs  fixedwidth.rs  generic.rs  lib.rs  types.rs
tests/: compact_encoding.rs  encodable.rs  generic.rs
