[package]
name = "compact-encoding"
version = "1.0.0"
license = "MIT OR Apache-2.0"
description = "A series of compact encoding schemes for building small and fast parsers and serializers"
documentation = "https://docs.rs/compact-encoding"
repository = "https://github.com/datrs/compact-encoding"
readme = "README.md"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]
keywords = ["dat", "encoding"]
categories = [
  "encoding",
]
edition = "2018"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "simple"
harness = false
